@@ -1,0 +1,34 @@
+##
+#	cdecl -- C gibberish translator
+#	share/zsh/site-functions/Makefile.am
+#
+#	Copyright (C) 2024  Paul J. Lucas
+#
+#	This program is free software: you can redistribute it and/or modify
+#	it under the terms of the GNU General Public License as published by
+#	the Free Software Foundation, either version 3 of the License, or
+#	(at your option) any later version.
+#
+#	This program is distributed in the hope that it will be useful,
+#	but WITHOUT ANY WARRANTY; without even the implied warranty of
+#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#	GNU General Public License for more details.
+#
+#	You should have received a copy of the GNU General Public License
+#	along with this program.  If not, see <http://www.gnu.org/licenses/>.
+##
+
+EXTRA_DIST =	_cdecl
+
+DEST_DIR =	$(datarootdir)/zsh/site-functions
+
+install-data-local: $(DEST_DIR) _cdecl
+	$(INSTALL_SCRIPT) _cdecl $(DEST_DIR)
+
+uninstall-local:
+	rm -f $(DEST_DIR)/_cdecl
+
+$(DEST_DIR):
+	mkdir -p $@
+
+# vim:set noet sw=8 ts=8:
