@@ -1,0 +1,34 @@
+#compdef cdecl=cdecl c++decl=c++decl
+
+##
+#       cdecl -- C gibberish translator
+#       share/zsh/site-functions/_cdecl
+#
+#       Copyright (C) 2024  Paul J. Lucas
+#
+#       This program is free software: you can redistribute it and/or modify
+#       it under the terms of the GNU General Public License as published by
+#       the Free Software Foundation, either version 3 of the License, or
+#       (at your option) any later version.
+#
+#       This program is distributed in the hope that it will be useful,
+#       but WITHOUT ANY WARRANTY; without even the implied warranty of
+#       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#       GNU General Public License for more details.
+#
+#       You should have received a copy of the GNU General Public License
+#       along with this program.  If not, see <http://www.gnu.org/licenses/>.
+##
+
+local -a cdecl_options
+local long short help
+
+# Change "[...]" to "(...)" since the former conflicts with zsh's syntax.
+$service --options | sed -e 's!\[!\(!g' -e 's!\]!\)!g' |
+  while read long short help
+  do cdecl_options+=({$short,$long}"[$help]")
+  done
+
+_arguments -A '-*' -s -S : $cdecl_options "1:command:($($service --commands))"
+
+# vim:set syntax=zsh et sw=2 ts=2:
