@@ -1,0 +1,2 @@
+EXPECTED_EXIT=0
+cdecl --options
