@@ -15,6 +15,15 @@ with their complete changes, see the AUTHORS file.
 ** Echoing commands short option
 The short option for `--echo-commands` has been changed from `-O` to `-E`.
 
+** Shell completion options
+There are two new options: `--commands`/`-K` that prints **cdecl**'s commands
+for the current language and `--options`/`-O` that prints cdecl's options`.
+Both are intended to aid in writing shell completion functions for **cdecl**.
+
+** Shell completion functions
+Bash and Zsh shell completion functions for **cdecl** are included under
+`share` and are installed as part of `make install`.
+
 
 * Changes in Cdecl 16.3
 
